--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,3 +1,5 @@
+/* BASIC STYLES */
+
 * {
     box-sizing: border-box;
 }
@@ -85,6 +87,7 @@ a:active {
 }
 
 
+
 /* WRAPPER */
 
 .wrapper {
@@ -95,6 +98,8 @@ a:active {
     animation: fadeIn 1.25s ease-in-out 0.25s;
     animation-fill-mode: backwards;
 }
+
+
 
 
 /* HEADER */
@@ -116,6 +121,8 @@ header {
     max-width: 960px;
     margin: 0 auto 0 auto;
 }
+
+
 
 
 /* MAIN NAV */
@@ -143,6 +150,7 @@ header {
     width: auto;
     line-height: 48px;
     font-weight: normal;
+    max-height: 60px;
 }
 
 .main-nav a:hover {
@@ -152,6 +160,8 @@ header {
     border-bottom: #4aaaa5 solid 10px;
     transition: all ease-in-out .2s;
 }
+
+
 
 
 /* MIDDLE SECTION */
@@ -207,6 +217,8 @@ aside {
 }
 
 
+
+
 /* SOCIAL NAV */
 
 .social-nav {
@@ -241,6 +253,8 @@ aside {
     border: #4aaaa5 solid 2px;
     transition: all ease-in-out .2s;
 }
+
+
 
 
 /* PORTFOLIO MODULES */
@@ -293,7 +307,7 @@ aside {
     background: url(../images/circles-light.png) no-repeat center center fixed;
     background-size: cover;
     color: #4aaaa5;
-    transition: all .3s;
+    transition: all ease-in-out .3s;
 }
 
 .portfolio-title a:hover::before {
@@ -325,6 +339,9 @@ aside {
     height: 183px;
 }
 
+
+/* FADE IN ANIMATION TIMING */
+
 .one {
     animation: fadeIn 1.25s ease-in-out 0.5s;
     animation-fill-mode: backwards;
@@ -351,6 +368,8 @@ aside {
 }
 
 
+
+
 /* FORM */
 
 form {
@@ -361,11 +380,21 @@ input,
 textarea {
     display: block;
     margin: 8px 0 20px 0;
+    font-family: 'Arial', 'Helvetica Neue', 'Helvetica', sans-serif;
     width: 100%;
     max-width: 100%;
     padding: 10px;
     color: #777777;
     border: #dddddd solid 1px;
+}
+
+input:focus,
+textarea:focus {
+    border: #4aaaa5 solid 1px;
+}
+
+textarea {
+    min-width: 100%;
 }
 
 label {
@@ -379,8 +408,10 @@ label {
 .submit {
     box-sizing: border-box;
     display: inline-block;
-    width: auto;
+    width: 100px;
+    height: 40px;
     padding: 10px 25px;
+    font-size: 14px;
     background-color: #4aaaa5;
     color: #ffffff;
     border: none;
@@ -393,16 +424,17 @@ label {
     padding: 8px 23px;
     border: #4aaaa5 solid 2px;
     cursor: pointer;
-    transition: all ease-in-out .1s;
 }
 
 .submit:active {
-    padding: 10px 25px;
     background-color: #4aaaa5;
-    box-shadow: none;
     color: #ffffff;
+    box-shadow: 2px 2px transparent;
+    padding: 10px 25px;
     border: none;
 }
+
+
 
 
 /* FOOTER */
@@ -431,6 +463,8 @@ footer p {
 }
 
 
+
+
 /* ANIMATIONS */
 
 @keyframes fadeIn {
@@ -442,6 +476,8 @@ footer p {
         opacity: 1;
     }
 }
+
+
 
 
 /* MEDIA QUERIES */
@@ -682,10 +718,3 @@ footer p {
         bottom: -5px;
     }
 }
-
-
-
-
-
-
-
