added rpg to portfolio

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -366,6 +366,11 @@ aside {
     animation-fill-mode: backwards;
 }
 
+.six {
+    animation: fadeIn 1.25s ease-in-out 1.75s;
+    animation-fill-mode: backwards;
+}
+
 
 
 
