added new project to portfolio

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -371,6 +371,11 @@ aside {
     animation-fill-mode: backwards;
 }
 
+.seven {
+    animation: fadeIn 1.25s ease-in-out 2s;
+    animation-fill-mode: backwards;
+}
+
 
 
 
